# SpeechT5_Korean

./: .gitignore  README.md  inference.py  inference_local.py  jamo_vocab.txt  jamo_vocab_builder.py  pyproject.toml  requirements.txt  train_speecht5.py
backup/: README.md  inference.py  jamo_vocab_builder.py  korean_text_utils.py  train_speecht5.py
preprocess/: 1.data_download.py  2.resampling.py  3.make_filelists.py  4.policy_adapter.py
scripts/: inference.py  train.py
sp5_kor/: __init__.py  config.py  data.py  tokenizer.py  trainer.py
sp5_kor/text/: __init__.py  jamo_vocab_builder.py  korean_text_utils.py
